Start basic map component in FV.razor

--- a/MemoryMosaic/Shared/Modal/FullscreenViewer/FullscreenViewer.razor
+++ b/MemoryMosaic/Shared/Modal/FullscreenViewer/FullscreenViewer.razor
@@ -146,6 +146,8 @@
 						</div>
 					</div>
 				}
+
+				if (Visible) { <FullscreenViewerMap Latitude="@Current.Latitude" Longitude="@Current.Longitude"/> }
 			}
 		</div>
 	</div>
